--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+.f-size-11{
+  font-size: 11px !important;
+}
+
+.f-size-8{
+  font-size: 8px !important;
+}
+
+.pointer{
+  cursor: pointer;
+}
+
